--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,14 @@ body{
     right: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: 101;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 100;
     transition:.5s;
     display: none;
+}
+
+.display-overlay {
+    display: block;
 } */
 
 header {
@@ -147,13 +151,13 @@ nav{
     position: fixed;
     top: 0;
     left: -100%;
-    width: 270px;
+    width: 100%;
     height: 100%;
     margin: 0;
     padding: 80px 0;
     list-style: none;
     background: #1e1e1e;
-    box-shadow: 0px 0px 5px rgba(250, 205, 102, 0.25);
+    /* box-shadow: 0px 0px 5px rgba(250, 205, 102, 0.25); */
     transition-duration: .5s;
     z-index: 101;
 }
@@ -211,7 +215,7 @@ li span{
 
 main{
     width: 90%;
-    margin: 70px auto 90px auto;
+    margin: 70px auto 100px auto;
 }
 
 .section{
@@ -651,6 +655,10 @@ h2{
     font-size: 12px;
     font-weight: 400;
     color: #ffffff;
+    cursor: pointer;
+}
+.ms-center h3:hover {
+    color: #FACD66;
 }
 .ms-center p{
     font-size: 10px;
